--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue-rg</title>
+    <title>Rank Games</title>
     <link rel="stylesheet" href="/dist/main.css">
   </head>
   <body>
