--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta name="charset" content="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rank Games</title>
-    <link rel="stylesheet" href="dist/main.css">
+    <link href="dist/main.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.1" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app"></div>
