--- a/index.manual.html
+++ b/index.manual.html
@@ -11,7 +11,7 @@
 
   <body>
     <div id="app"></div>
-    <script src="dist/build.js"></script>
+    <script src="dist/build.js?v=[AIV]{version}[/AIV]"></script>
   </body>
 
 </html>
