implemented cachebust filename via webpack file name substitution

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
   <head>
-    <meta name="charset" content="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>
-      <%= htmlWebpackPlugin.options.title %> &raquo;
-        <%= htmlWebpackPlugin.options.version %>
+      <%= htmlWebpackPlugin.options.title %> @ [AIV]{version}[/AIV]
     </title>
-    <link href="dist/main.css" rel="stylesheet" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.1" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <div id="app"></div>
-    <script src="dist/build.js"></script>
   </body>
 
 </html>
