--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="charset" content="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
       <%= htmlWebpackPlugin.options.title %> @ [AIV]{version}[/AIV]
     </title>
