--- a/rankgames2/index.html
+++ b/rankgames2/index.html
@@ -1,16 +1,18 @@
-<!-- [AIV_SHORT]  Build version: 1.0.6 - Tuesday, May 15th, 2018, 3:45:58 PM  --> 
+<!-- [AIV_SHORT]  Build version: 1.0.6 - Tuesday, May 15th, 2018, 4:21:21 PM  --> 
  <!DOCTYPE html>
 <html>
 
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="charset" content="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
       Rank Games 2 @ 1.0.6
     </title>
-  <link href="/rankgames2/main.css?7fb330f11c5900b19d9d" rel="stylesheet"></head>
+  <link href="/rankgames2/main.css?f2be97e4c83970099ae8" rel="stylesheet"></head>
 
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="/rankgames2/main.7fb330f11c5900b19d9d.js?7fb330f11c5900b19d9d"></script></body>
+  <script type="text/javascript" src="/rankgames2/main.f2be97e4c83970099ae8.js?f2be97e4c83970099ae8"></script></body>
 
 </html> 
