--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="charset" content="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>
       <%= htmlWebpackPlugin.options.title %> @ [AIV]{version}[/AIV]
     </title>
