implemented load screen

--- a/rankgames2/index.html
+++ b/rankgames2/index.html
@@ -1,18 +1,49 @@
-<!-- [AIV_SHORT]  Build version: 1.0.6 - Tuesday, May 15th, 2018, 4:21:21 PM  --> 
+<!-- [AIV_SHORT]  Build version: 1.0.6 - Tuesday, May 15th, 2018, 5:10:17 PM  --> 
  <!DOCTYPE html>
 <html>
 
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="charset" content="utf-8">
+    <meta name="charset" content="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="css/fontello.css?c=13245949358475893475983" />
+    <link rel="stylesheet" href="css/animation.css" />
     <title>
       Rank Games 2 @ 1.0.6
     </title>
-  <link href="/rankgames2/main.css?f2be97e4c83970099ae8" rel="stylesheet"></head>
+    <style>
+      .loading {
+        text-align: center;
+        height: 100vh;
+        width: 100vw;
+        background-color: #0033a7;
+        color: #ffffff;
+        font-family: "Tahoma", sans-serif;
+      }
+
+      img {
+        height: 50vh;
+        margin-top: 10vh;
+      }
+
+      i {
+        font-size: 10em;
+      }
+    </style>
+  <link href="/rankgames2/main.css?d740e609d190f5fdbbc5" rel="stylesheet"></head>
 
   <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="/rankgames2/main.f2be97e4c83970099ae8.js?f2be97e4c83970099ae8"></script></body>
+    <div id="apsp">
+
+      <div class="loading">
+        <img src="img/logo.png" alt="Rank Games 2">
+        <div>
+          <i class=" icon icon-spinner1 animate-spin"></i>
+          <p>The app is loading.</p>
+        </div>
+      </div>
+    </div>
+  <script type="text/javascript" src="/rankgames2/main.d740e609d190f5fdbbc5.js?d740e609d190f5fdbbc5"></script></body>
 
 </html> 
