--- a/rankgames2/index.html
+++ b/rankgames2/index.html
@@ -1,4 +1,4 @@
-<!-- [AIV_SHORT]  Build version: 1.0.6 - Tuesday, May 15th, 2018, 5:10:17 PM  --> 
+<!-- [AIV_SHORT]  Build version: 1.1.0 - Thursday, May 17th, 2018, 11:31:04 AM  --> 
  <!DOCTYPE html>
 <html>
 
@@ -10,31 +10,31 @@
     <link rel="stylesheet" href="css/fontello.css?c=13245949358475893475983" />
     <link rel="stylesheet" href="css/animation.css" />
     <title>
-      Rank Games 2 @ 1.0.6
+      Rank Games 2 @ 1.1.0
     </title>
     <style>
       .loading {
         text-align: center;
         height: 100vh;
         width: 100vw;
-        background-color: #0033a7;
+        background-color: #0d1e46;
         color: #ffffff;
         font-family: "Tahoma", sans-serif;
       }
 
-      img {
+      .loading img {
         height: 50vh;
         margin-top: 10vh;
       }
 
-      i {
-        font-size: 10em;
+      .loading i {
+        font-size: 3em;
       }
     </style>
-  <link href="/rankgames2/main.css?d740e609d190f5fdbbc5" rel="stylesheet"></head>
+  <link href="/rankgames2/main.css?267e4c2c356ce1cc37df" rel="stylesheet"></head>
 
   <body>
-    <div id="apsp">
+    <div id="app">
 
       <div class="loading">
         <img src="img/logo.png" alt="Rank Games 2">
@@ -44,6 +44,6 @@
         </div>
       </div>
     </div>
-  <script type="text/javascript" src="/rankgames2/main.d740e609d190f5fdbbc5.js?d740e609d190f5fdbbc5"></script></body>
+  <script type="text/javascript" src="/rankgames2/main.267e4c2c356ce1cc37df.js?267e4c2c356ce1cc37df"></script></body>
 
 </html> 
