--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,20 @@
 <html>
 
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61977601-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-61977601-4');
+    </script>
+
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="charset" content="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
