added ga tracker

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/fontello.css?c=13245949358475893475983" />
     <link rel="stylesheet" href="css/animation.css" />
     <title>
-      <%= htmlWebpackPlugin.options.title %> @ [AIV]{version}[/AIV]
+      <%= htmlWebpackPlugin.options.title %> @ [AIV]{version}[/AI]V
     </title>
     <style>
       .loading {
