only encodeURI(username) if it contains space(s)

--- a/rankgames2/index.html
+++ b/rankgames2/index.html
@@ -1,8 +1,22 @@
-<!-- [AIV_SHORT]  Build version: 1.1.0 - Thursday, May 17th, 2018, 11:31:04 AM  --> 
+<!-- [AIV_SHORT]  Build version: 1.1.1 - Tuesday, June 5th, 2018, 2:11:24 PM  --> 
  <!DOCTYPE html>
 <html>
 
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61977601-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-61977601-4');
+    </script>
+
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="charset" content="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,7 +24,7 @@
     <link rel="stylesheet" href="css/fontello.css?c=13245949358475893475983" />
     <link rel="stylesheet" href="css/animation.css" />
     <title>
-      Rank Games 2 @ 1.1.0
+      Rank Games 2 @ 1.1.1
     </title>
     <style>
       .loading {
@@ -31,7 +45,7 @@
         font-size: 3em;
       }
     </style>
-  <link href="/rankgames2/main.css?267e4c2c356ce1cc37df" rel="stylesheet"></head>
+  <link href="/rankgames2/main.css?ca9955637e6c4a6c70a7" rel="stylesheet"></head>
 
   <body>
     <div id="app">
@@ -44,6 +58,6 @@
         </div>
       </div>
     </div>
-  <script type="text/javascript" src="/rankgames2/main.267e4c2c356ce1cc37df.js?267e4c2c356ce1cc37df"></script></body>
+  <script type="text/javascript" src="/rankgames2/main.ca9955637e6c4a6c70a7.js?ca9955637e6c4a6c70a7"></script></body>
 
 </html> 
