--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61977601-4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -23,7 +22,7 @@
     <link rel="stylesheet" href="css/fontello.css?c=13245949358475893475983" />
     <link rel="stylesheet" href="css/animation.css" />
     <title>
-      <%= htmlWebpackPlugin.options.title %> @ [AIV]{version}[/AI]V
+      <%= htmlWebpackPlugin.options.title %> @ [AIV]{version}[/AIV]
     </title>
     <style>
       .loading {
